# Fayri_bot_vk

./: .gitignore  README.md  pyproject.toml
fayri_bot/: config.py  examplesbot.py  main.py
fayri_bot/handlers/: __init__.py  admin.py  customer.py
fayri_bot/modules/: MyKeyboards.py  __init__.py  custom_rules.py  db.py  states.py
